<resources>
    <string name="app_name">BoulderShare</string>
    <string name="action_share">Share</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="author">Author (nickname)</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="action_info">Add info</string>
    <string name="comment">Comment</string>
    <string name="grade_label">Grade</string>
    <string name="problem_name">Problem name</string>

    <string name="problem_deleted">The selected boulder problem has been deleted</string>
    <string name="image_saved">Image has been saved and is available in the gallery</string>
    <string name="problem_being_deleted">Boulder problem is being deleted...</string>
    <string name="action_save">Save</string>
    <string name="action_donate">Donate</string>
    <string name="action_tutorial">Tutorial</string>
    <string name="app_intro">Tutorial</string>
    <string name="no_mboulderbitmap">Unable to load the image, please try again</string>
    <string name="no_read_permission">Unable to load the image because WRITE_EXTERNAL_STORAGE permission was denied. Please try again.</string>

    <string-array name="grades_array">
        <item>Unknown</item>
        <item>4</item>
        <item>4+</item>
        <item>5</item>
        <item>5+</item>
        <item>6A</item>
        <item>6A+</item>
        <item>6B</item>
        <item>6B+</item>
        <item>6C</item>
        <item>6C+</item>
        <item>7A</item>
        <item>7A+</item>
        <item>7B</item>
        <item>7B+</item>
        <item>7C</item>
        <item>7C+</item>
        <item>8A</item>
        <item>8A+</item>
        <item>8B</item>
        <item>8B+</item>
        <item>8C</item>
        <item>8C+</item>
    </string-array>
</resources>
