<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.herak.bouldershare.MainActivity">
    <item
        android:id="@+id/action_info"
        android:orderInCategory="100"
        android:title="@string/action_info"
        android:icon="@android:drawable/ic_dialog_info"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_save"
        android:orderInCategory="101"
        android:title="@string/action_save"
        android:icon="@android:drawable/ic_menu_save"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="102"
        android:title="@string/action_share"
        android:icon="@android:drawable/ic_menu_share"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_donate"
        android:orderInCategory="105"
        android:title="@string/action_donate"
        android:visible="true"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_tutorial"
        android:orderInCategory="104"
        android:title="@string/action_tutorial"
        android:icon="@android:drawable/ic_menu_help"
        android:visible="true"
        app:showAsAction="ifRoom" />
</menu>
